# openGL-study-cpp

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp
base/: Camera.h  Executor.h  MyShader.cpp  MyShader.h  OpenWindow.cpp  OpenWindow.h  Shader.h  mesh.h  model.h
base/shader_file/: CameraTest5.fs  CameraTest5.vs  GlmTest4.fs  GlmTest4.vs
example/: CameraTest5.cpp  DrawTriangle1.cpp  DrawTriangle_1.cpp  GlmTest4.cpp  LightTest6.cpp  ShaderTest2.cpp  TextureTest3.cpp  model_loading.cpp
example/header/: CameraTest5.h  DrawTriangle.h  DrawTriangle1.h  GlmTest4.h  LightTest6.h  ShaderTest2.h  TextureTest3.h
